internal/parser/game/tokenizer.go

//line ./game/tokenizer.go.rl:1
// Generated code. DO NOT EDIT

package game

import (
	"fmt"
	"strconv"
	"time"
	"errors"
)


//line ./game/tokenizer.go:14
const logparser_start int = 1
const logparser_first_final int = 175
const logparser_error int = 0

const logparser_en_main int = 1


//line ./game/tokenizer.go.rl:20


type state struct {
	data string

	prev int

	// Data end pointer. This should be initialized to p plus the data length on every run of the machine. In Java and Ruby code this should be initialized to the data length.
	pe int

	// Data pointer. In C/D code this variable is expected to be a pointer to the character data to process.
	// It should be initialized to the beginning of the data block on every run of the machine.
	// In Java and Ruby it is used as an offset to data and must be an integer.
	// In this case it should be initialized to zero on every run of the machine.
	p int

	// Token start
	ts int
	// Token end
	te int

	// This must be an integer value. It is a variable sometimes used by scanner code to keep track of the most recent successful pattern match.
	act int

	// Current state.
	// This must be an integer and it should persist across invocations of the machine when the data is broken into blocks that are processed independently.
	// This variable may be modified from outside the execution loop, but not from within.
	cs int

	// This must be an integer value and will be used as an offset to stack, giving the next available spot on the top of the stack.
	top int
}

func (e state) String() string {
	return fmt.Sprintf("state: %q p=%d, pe=%d, ts=%d, te=%d, act=%d, cs=%d, top=%d", e.data[:e.p], e.p, e.pe, e.ts, e.te, e.act, e.cs, e.top)
}

func (e state) Error() string {
	return e.String()
}

type tokenizer struct {
	nowTime time.Time
	tokens []token
	errors []error
	state
}


//line ./game/tokenizer.go.rl:142


func (t *tokenizer) Parse(nowTime time.Time, data string) ([]token, error) {
	var parseErr error
	var temp yySymType

	t.state = state{}
	
//line ./game/tokenizer.go:78
	{
	 t.cs = logparser_start
	}

//line ./game/tokenizer.go.rl:150

	t.prev = 0
	t.pe = len(data)
	t.nowTime = nowTime
	t.data = data

	t.tokens = t.tokens[:0]
	t.errors = nil

	
//line ./game/tokenizer.go:92
	{
	if ( t.p) == ( t.pe) {
		goto _test_eof
	}
	switch  t.cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 175:
		goto st_case_175
	case 176:
		goto st_case_176
	case 177:
		goto st_case_177
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 178:
		goto st_case_178
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	case 179:
		goto st_case_179
	case 180:
		goto st_case_180
	case 155:
		goto st_case_155
	case 156:
		goto st_case_156
	case 157:
		goto st_case_157
	case 158:
		goto st_case_158
	case 159:
		goto st_case_159
	case 160:
		goto st_case_160
	case 161:
		goto st_case_161
	case 162:
		goto st_case_162
	case 163:
		goto st_case_163
	case 164:
		goto st_case_164
	case 165:
		goto st_case_165
	case 166:
		goto st_case_166
	case 167:
		goto st_case_167
	case 168:
		goto st_case_168
	case 169:
		goto st_case_169
	case 170:
		goto st_case_170
	case 171:
		goto st_case_171
	case 172:
		goto st_case_172
	case 173:
		goto st_case_173
	case 174:
		goto st_case_174
	}
	goto st_out
	st_case_1:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto tr0
		}
		goto st0
st_case_0:
	st0:
		 t.cs = 0
		goto _out
tr0:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st2
	st2:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof2
		}
	st_case_2:
//line ./game/tokenizer.go:485
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st3
		}
		goto st0
	st3:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof3
		}
	st_case_3:
		if ( t.data)[( t.p)] == 58 {
			goto st4
		}
		goto st0
	st4:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof4
		}
	st_case_4:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st5
		}
		goto st0
	st5:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof5
		}
	st_case_5:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st6
		}
		goto st0
	st6:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof6
		}
	st_case_6:
		if ( t.data)[( t.p)] == 58 {
			goto st7
		}
		goto st0
	st7:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof7
		}
	st_case_7:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st8
		}
		goto st0
	st8:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof8
		}
	st_case_8:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st9
		}
		goto st0
	st9:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof9
		}
	st_case_9:
		if ( t.data)[( t.p)] == 46 {
			goto st10
		}
		goto st0
	st10:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof10
		}
	st_case_10:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st11
		}
		goto st0
	st11:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof11
		}
	st_case_11:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st12
		}
		goto st0
	st12:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof12
		}
	st_case_12:
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st13
		}
		goto st0
	st13:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof13
		}
	st_case_13:
		if ( t.data)[( t.p)] == 32 {
			goto tr13
		}
		goto st0
tr13:
//line ./game/tokenizer.go.rl:95

		temp.Time, parseErr = parseTime(t.nowTime, t.data[t.prev:t.p])
		if parseErr != nil {
			t.err(ParseTokenError{TokType: "TIME", Raw: t.data[t.prev:t.p], Err: fmt.Errorf("parseTime: %w", parseErr)})
			{( t.p)++;  t.cs = 14; goto _out }
		}
		t.tokval(timeTok(temp.Time))
	
	goto st14
	st14:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof14
		}
	st_case_14:
//line ./game/tokenizer.go:605
		if ( t.data)[( t.p)] == 32 {
			goto tr15
		}
		if 9 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 13 {
			goto tr14
		}
		goto st0
tr14:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st15
	st15:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof15
		}
	st_case_15:
//line ./game/tokenizer.go:627
		switch ( t.data)[( t.p)] {
		case 32:
			goto st15
		case 124:
			goto tr17
		}
		if 9 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 13 {
			goto st15
		}
		goto st0
tr17:
//line ./game/tokenizer.go.rl:119
 t.tok(GAME) 
	goto st16
	st16:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof16
		}
	st_case_16:
//line ./game/tokenizer.go:647
		if ( t.data)[( t.p)] == 32 {
			goto st17
		}
		goto st0
	st17:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof17
		}
	st_case_17:
		switch ( t.data)[( t.p)] {
		case 32:
			goto st17
		case 99:
			goto tr19
		}
		goto st0
tr19:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st18
	st18:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof18
		}
	st_case_18:
//line ./game/tokenizer.go:678
		if ( t.data)[( t.p)] == 108 {
			goto st19
		}
		goto st0
	st19:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof19
		}
	st_case_19:
		if ( t.data)[( t.p)] == 105 {
			goto st20
		}
		goto st0
	st20:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof20
		}
	st_case_20:
		if ( t.data)[( t.p)] == 101 {
			goto st21
		}
		goto st0
	st21:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof21
		}
	st_case_21:
		if ( t.data)[( t.p)] == 110 {
			goto st22
		}
		goto st0
	st22:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof22
		}
	st_case_22:
		if ( t.data)[( t.p)] == 116 {
			goto st23
		}
		goto st0
	st23:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof23
		}
	st_case_23:
		if ( t.data)[( t.p)] == 58 {
			goto st24
		}
		goto st0
	st24:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof24
		}
	st_case_24:
		if ( t.data)[( t.p)] == 32 {
			goto st25
		}
		goto st0
	st25:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof25
		}
	st_case_25:
		switch ( t.data)[( t.p)] {
		case 65:
			goto st26
		case 99:
			goto st81
		case 112:
			goto st155
		}
		goto st0
	st26:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof26
		}
	st_case_26:
		if ( t.data)[( t.p)] == 68 {
			goto st27
		}
		goto st0
	st27:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof27
		}
	st_case_27:
		if ( t.data)[( t.p)] == 68 {
			goto st28
		}
		goto st0
	st28:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof28
		}
	st_case_28:
		if ( t.data)[( t.p)] == 95 {
			goto st29
		}
		goto st0
	st29:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof29
		}
	st_case_29:
		if ( t.data)[( t.p)] == 80 {
			goto st30
		}
		goto st0
	st30:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof30
		}
	st_case_30:
		if ( t.data)[( t.p)] == 76 {
			goto st31
		}
		goto st0
	st31:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof31
		}
	st_case_31:
		if ( t.data)[( t.p)] == 65 {
			goto st32
		}
		goto st0
	st32:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof32
		}
	st_case_32:
		if ( t.data)[( t.p)] == 89 {
			goto st33
		}
		goto st0
	st33:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof33
		}
	st_case_33:
		if ( t.data)[( t.p)] == 69 {
			goto st34
		}
		goto st0
	st34:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof34
		}
	st_case_34:
		if ( t.data)[( t.p)] == 82 {
			goto st35
		}
		goto st0
	st35:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof35
		}
	st_case_35:
		if ( t.data)[( t.p)] == 32 {
			goto st36
		}
		goto st0
	st36:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof36
		}
	st_case_36:
		if ( t.data)[( t.p)] == 45 {
			goto tr40
		}
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto tr41
		}
		goto st0
tr40:
//line ./game/tokenizer.go.rl:127
t.tok(CLIENT_ADD_PLAYER)
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st37
	st37:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof37
		}
	st_case_37:
//line ./game/tokenizer.go:869
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st38
		}
		goto st0
tr41:
//line ./game/tokenizer.go.rl:127
t.tok(CLIENT_ADD_PLAYER)
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st38
	st38:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof38
		}
	st_case_38:
//line ./game/tokenizer.go:890
		if ( t.data)[( t.p)] == 32 {
			goto tr43
		}
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st38
		}
		goto st0
tr43:
//line ./game/tokenizer.go.rl:79

		temp.Int, parseErr = strconv.Atoi(t.data[t.prev:t.p])
		if parseErr != nil {
			t.err(ParseTokenError{TokType: "INT", Raw: t.data[t.prev:t.p], Err: fmt.Errorf("strconv.Atoi: %w", parseErr)})
			{( t.p)++;  t.cs = 39; goto _out }
		}
		t.tokval(intTok(temp.Int))
	
	goto st39
	st39:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof39
		}
	st_case_39:
//line ./game/tokenizer.go:914
		if ( t.data)[( t.p)] == 40 {
			goto st40
		}
		goto st0
	st40:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof40
		}
	st_case_40:
		switch ( t.data)[( t.p)] {
		case 40:
			goto tr45
		case 95:
			goto tr46
		}
		switch {
		case ( t.data)[( t.p)] < 65:
			if 47 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
				goto tr46
			}
		case ( t.data)[( t.p)] > 90:
			if 97 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 122 {
				goto tr46
			}
		default:
			goto tr46
		}
		goto st0
tr45:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st41
	st41:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof41
		}
	st_case_41:
//line ./game/tokenizer.go:957
		if ( t.data)[( t.p)] == 95 {
			goto st42
		}
		switch {
		case ( t.data)[( t.p)] < 65:
			if 47 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
				goto st42
			}
		case ( t.data)[( t.p)] > 90:
			if 97 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 122 {
				goto st42
			}
		default:
			goto st42
		}
		goto st0
	st42:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof42
		}
	st_case_42:
		switch ( t.data)[( t.p)] {
		case 41:
			goto st43
		case 95:
			goto st42
		}
		switch {
		case ( t.data)[( t.p)] < 65:
			if 47 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
				goto st42
			}
		case ( t.data)[( t.p)] > 90:
			if 97 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 122 {
				goto st42
			}
		default:
			goto st42
		}
		goto st0
	st43:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof43
		}
	st_case_43:
		switch ( t.data)[( t.p)] {
		case 32:
			goto tr49
		case 44:
			goto tr50
		}
		goto st0
tr49:
//line ./game/tokenizer.go.rl:76

		t.tokval(strTok(t.data[t.prev:t.p]))
	
	goto st44
	st44:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof44
		}
	st_case_44:
//line ./game/tokenizer.go:1021
		if ( t.data)[( t.p)] == 91 {
			goto st45
		}
		goto st0
	st45:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof45
		}
	st_case_45:
		switch ( t.data)[( t.p)] {
		case 40:
			goto tr52
		case 93:
			goto st49
		case 95:
			goto tr53
		}
		switch {
		case ( t.data)[( t.p)] < 65:
			if 47 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
				goto tr53
			}
		case ( t.data)[( t.p)] > 90:
			if 97 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 122 {
				goto tr53
			}
		default:
			goto tr53
		}
		goto st0
tr52:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st46
	st46:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof46
		}
	st_case_46:
//line ./game/tokenizer.go:1066
		if ( t.data)[( t.p)] == 95 {
			goto st47
		}
		switch {
		case ( t.data)[( t.p)] < 65:
			if 47 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
				goto st47
			}
		case ( t.data)[( t.p)] > 90:
			if 97 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 122 {
				goto st47
			}
		default:
			goto st47
		}
		goto st0
	st47:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof47
		}
	st_case_47:
		switch ( t.data)[( t.p)] {
		case 41:
			goto st48
		case 95:
			goto st47
		}
		switch {
		case ( t.data)[( t.p)] < 65:
			if 47 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
				goto st47
			}
		case ( t.data)[( t.p)] > 90:
			if 97 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 122 {
				goto st47
			}
		default:
			goto st47
		}
		goto st0
	st48:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof48
		}
	st_case_48:
		if ( t.data)[( t.p)] == 93 {
			goto tr57
		}
		goto st0
tr57:
//line ./game/tokenizer.go.rl:76

		t.tokval(strTok(t.data[t.prev:t.p]))
	
	goto st49
	st49:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof49
		}
	st_case_49:
//line ./game/tokenizer.go:1127
		if ( t.data)[( t.p)] == 44 {
			goto st50
		}
		goto st0
tr50:
//line ./game/tokenizer.go.rl:76

		t.tokval(strTok(t.data[t.prev:t.p]))
	
	goto st50
	st50:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof50
		}
	st_case_50:
//line ./game/tokenizer.go:1143
		if ( t.data)[( t.p)] == 32 {
			goto st51
		}
		goto st0
	st51:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof51
		}
	st_case_51:
		if ( t.data)[( t.p)] == 45 {
			goto tr60
		}
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto tr61
		}
		goto st0
tr60:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st52
	st52:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof52
		}
	st_case_52:
//line ./game/tokenizer.go:1174
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st53
		}
		goto st0
tr61:
//line ./game/tokenizer.go.rl:103

		if debugTokenizer {
			fmt.Printf("start: %s\n", t.state)
		}
		t.prev = t.p
	
	goto st53
	st53:
		if ( t.p)++; ( t.p) == ( t.pe) {
			goto _test_eof53
		}
	st_case_53:
//line ./game/tokenizer.go:1193
		if ( t.data)[( t.p)] == 41 {
			goto tr63
		}
		if 48 <= ( t.data)[( t.p)] && ( t.data)[( t.p)] <= 57 {
			goto st53
		}
		goto st0
tr63:
//line ./game/tokenizer.go.rl:79
